# RecoilLasertag

./: .gitignore  BluetoothTests.md  LICENSE  README.md  Weapons.md
BluetoothClient/: 20250902_BluetoothSequenceFromScope.md
BluetoothClient/BluetoothTest/: Bluetooth.cs  BluetoothTest.csproj  BluetoothTest.sln  DeviceManager.cs  Example.cs  IdentityPayload.cs  ParsingExample.cs  Program.cs  TelemetryPayload.cs
BluetoothClient/Esp32BluetoothTest/: README.md  platformio.ini
BluetoothClient/cpp_tests/: .gitignore  CMakeLists.txt  README.md
BluetoothClient/cpp_tests/include/: BufferHelper.h  Calculator.h
BluetoothClient/cpp_tests/src/: Calculator.cpp
BluetoothClient/cpp_tests/tests/: BufferHelperTests.cpp  CalculatorTests.cpp
CAD/m4 template/: Barrel.stl  Butt_pad.stl  Charging_Handle_Spring_Catch.stl  Charging_handle.stl  Charging_handle_latch.stl  Clamping_Bar.stl  Crossbolt.stl  Delta_Ring.stl  Forward_assist_Plunger.stl  Front_Sight.stl  Front_Sight_Pins_x2.stl  Front_Sight_Post.stl  Grip.stl  Mag_catch_button_v3.stl  Mag_catch_v1.stl  Rear_Sight_Thumb_Nuts_x2.stl  Receiver_half_B.stl  Selector_Lever.stl  Selector_Lever_Detent.stl  Stock_Lever.stl  Stock_tube.stl  Trigger.stl  Windage_Knob.stl  pin_cap.stl  rear_sight_cross_bolts.stl  rear_sight_rail_clamp.stl  receiver_half_A.stl  stock_pin.stl  temp.txt
documentation/: WirelessConnection.md
documentation/datasheets/: .~lock.Recoil_Protocol_BLE.docx#  priv.pem
electronic/simulation/: ir_tx.txt
ir_led_tester/: Target.FCStd  Target.FCStd1  ir_led_tester.md
(+19 files in other folders)
